# maybe-atomic

./: Cargo.toml  README.md
src/: lib.rs
